--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,31 @@ data_stemmed_termes_fuer_tbdb/
 fiz_full_lvl1.jar
 lib.rar
 prec-rec-graphs-stemmed-tersm
+all-best-dev-flat
+all-best-dev-tfidf
+all-best-dev-tfidf-norm
+all-classes-for-document.jar
+cikm/
+confusion_graphs/
+confusion_graphs_variant_1/
+confusion_graphs_variant_2/
+confusion_graphs_variant_3/
+data_evaluate_if_choosing_only_the_main_class_is_better/
+data_mini/
+data_try_train_set_selection/
+data_try_train_set_selection2/
+formula_to_cmathml
+merged-(conf10+dev-50000)-flat
+merged-(conf10+dev-50000)-tfidf
+merged-corpus-discrete.json
+merged-descrete flat
+prec-rec-graphs/
+reports/
+reports_not_only_main_class_not_normalized/
+reports_only_main_class__normalized/
+reports_only_main_class__not_normalized/
+text-math-corpus/
+tmpAfterLsi
+trans_predictions
+
 svm.jar
